@@ -17,10 +17,12 @@ DIST gitlab-ce-8.13.6.tar.gz 27816283 SHA256 48f29ab3c33123898502563c764fbbfcc3a
 DIST gitlab-ce-8.14.0.tar.gz 29710909 SHA256 817f4d5dbb5a59d204f71954d0549f99b91746563d190f73346427a0130051e8 SHA512 4428fd6cecadd613dee705107a69bdbc87db0a80a85b431b26575c6e00ad6802d5240bb3c4a7b67b75f7dcb6926a230a845f329004ae8c60d484dd96cb79ef1f WHIRLPOOL 7aaf718229ebb99f42a4f1462cdc5da4de1f23d90e28fee20f25d93e3f8959e21c5275d4116bba16ed41450609ea1d28dcf5c150c80313a5776ed00b47bee7fc
 DIST gitlab-ce-8.14.0_rc4.tar.gz 30101713 SHA256 667cccc428d20d241a19bb554eb517673e447db85d163f8245f1d9969e233a4d SHA512 4389aa9139836ec2ab70036df1f1f4324e57edc3fd13c331179e3774c2f65f253c66eaae7699ab427248ef05d2b128ddfe425b59596f1e6070e1b2278a883c37 WHIRLPOOL 1fd35f86555f45003621dda41cb1a31892dac9b02982fc04873c65ba5f7b1960b75c4b4d6ac7fe0d13b5c11e516d997504f9184449fa48ab272e696579154529
 DIST gitlab-ce-8.14.1.tar.gz 29715000 SHA256 81c5b9019fba31546ce414424a567a999783be0d5ab0ae865c5576073e864bae SHA512 780040ea9764dbadddcd9c8cbbb743e4b101d5da3fdbd792b6da3dced26179884bb348323c75888040b45231f091605246ccaa6af17f79e2aefb0931bbf32a47 WHIRLPOOL dd23ae35a67f1cdca76f671b96ab6dd8f5b7782e3e43da0e63872a0842098da8e2dbcf6515a8c43a1f1fdb0949a8ce19d31148b50b198fb4054f32285f914690
+DIST gitlab-ce-8.14.2.tar.gz 29715506 SHA256 9d45a0a86c6b01e0c48e7fe2fc442fe774f062b8b149f1d697c38aa29f6c3a25 SHA512 f65d12eafc397c5146264615ae384721165bd11498adf02f34c3fa65e55ac0b20d16d14d78455d46454c14bd0f075dedd627d5940853bfb99143c52d4d8c4194 WHIRLPOOL 44a9daf2dc4aea80e84a44fe45d085600ef463b5346417f36c4fd550749bba4599e328f43485317dadbbdab2fca6fef56c91cc41ea6156eeb797671e7416bc7f
 EBUILD gitlab-ce-8.13.6.ebuild 11979 SHA256 761411082e2e68f432f913f5c5c969847832d335b1f7843575890ba125542539 SHA512 ab01af577da7a27cee3308c6766a042edbce7f1c472639b9a24b9bef3a7ce37389dd8e32b43cf62b9ce7c20399ccf17fd35f678ea63598b4b06890bfeabded50 WHIRLPOOL cc14b981521f0513108ab4320f2e3d4f210ec0da7373f0f99b35d975003b5e1ff5783c5db5c6b7f29739e795fc73d4744716f81056039eefaf445354bd7cb000
 EBUILD gitlab-ce-8.14.0.ebuild 12058 SHA256 ef9893f42bf74b6864d5647c406afb69412cfa88ab89fa3bbc8a69d92f6eabe9 SHA512 182be258e2ede41a056d0ecc6c8691dc89af035474b711c74887b61105e1260fd0cc02556931e713cc256766a8879356ea07ce7bb9aa8f463eedf63925afe52e WHIRLPOOL 69c12e67507d5f27bf5491d06a1f0de7e0bc156b624008977f7150b623728e255ebdcecb100aa3133dc8063f7bdfb5586c0924fa3077c1141090719666d1cb76
 EBUILD gitlab-ce-8.14.0_rc4.ebuild 11956 SHA256 d6e509c5e9de4c361f04a8c76d0e87b947c5416bc6222e716d368cd82cd55df3 SHA512 58d8862ccb1d09b05bc880fa36d6d3936d1d666537da395817e794b7410fba0df1afc136a6e2bebd6d29b2bf16ef8cd95ac3130e6f35b678c543f7e0e552810a WHIRLPOOL a348a04316fa46da98816ea6a51b641aae68b13b513cfd445b002d2a6180786cf0fd5fdfcf0420ceec8de7a090b01f4009334fe5618c47813b40f0baed8360da
 EBUILD gitlab-ce-8.14.1.ebuild 12058 SHA256 95df987cfcc654adfff434916f3b3c093bd363f147ce732f2712923c38c6cea1 SHA512 7aac8dd78a3d25eb6a3664f7818188d89dea015cfb88f37c5d54597b9e0351f208d82a96488ec0109769d59b264d0a81f4656e3e95b63fe1ac99290879f28497 WHIRLPOOL 683ca7f8b32b89ebc3f503481ef6891dea756297f4a474efb62791f5b0bfd3e5287498bc0f78b73592b1c1cc8ce7ec67748a439399c601992f300dfcbe190560
+EBUILD gitlab-ce-8.14.2.ebuild 12058 SHA256 d3ceac76fde85644bae8524b94e29c484a125aa3bb5e55cd4ffe0d738e0e2e90 SHA512 c47d3a69ba675a8f6637a229b1fc65a4c0c6c00c6532ecc06d32f332129cfea8b89c6267bf9110e449c3fe20487be8a0d627fac06f19ab2824e8b161598e8e6e WHIRLPOOL 4a394a334e1ba27d6438cf351b54d83324210b39d0d6d3707828fd48413e2258314b80507136bc09764568c479814d5b1b6cf30b40b64a80b29a3506c256f4da
 EBUILD gitlab-ce-9999.ebuild 11913 SHA256 f6e02b9e122033339874bce07dd4b1663a8b3dee9ad86e5793a9dbf7517e78b6 SHA512 43943fc250c810f131bdcfef518373b12bb997b84c12d5ee50b3006ddc9a7df4541a08faf2ea35dcd56ad70a7fd3d5dfc17c529b30df99c426d6418c3e5ee051 WHIRLPOOL ff7cf1a2a82545f16e2c7804ace0a8b2d00acab24233afe293668ab7573131065e1b301979d87563dd235a9fb4bebd3156aa9bddcb547cfb1b837103273686f5
-MISC ChangeLog 11146 SHA256 112155c6cbcb661aaf760957d39cd990374f5d3adfca20600c4a58b1fb6f176f SHA512 19cda6570b1b3dbd8a77e011e34e0c844968148f6338cb780572c7a00407f49ea799c640611bfa0f34c8b095bbd25deef18eed20345efec283ddcf067b64e6a7 WHIRLPOOL 4156bbdd85cbe9ee18cbe75e4d5a6fc43a0e765d9cdc05e325fcec6715d7f779f608fb98457d2d105712ee3ab3cd7e32f565162312b8d6e8581373b6da64e37f
+MISC ChangeLog 11327 SHA256 cc5db984a3f453423d0f1b9d04e733beab0e650f0efa070cad356df93b9f31c3 SHA512 e44d8d969f485c0ccba082484db2e9323f46cfdef26976c27f7a145dddc310f3a30791f24a1c1fd834f9223e9cb8016ba7f7ed11d699d8112a5db79879394d56 WHIRLPOOL 3ce57220a6d31cca973fb965cf8d7624caa06bcf947deae33a667b3f16e050840e66bac271f842ce784952971d5bc9e6201f7e6399f022c76301d36b498edc53
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
