@@ -1,3 +1,8 @@
+*gitlab-ce-8.14.2 (05 Dec 2016)
+
+  05 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.2.ebuild:
+  www-apps/gitlab-ce:  added ebuild for latest bugfix release v8.14.2
+
   23 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
   -files/gitlab-8.10.6-sidekiq.service, -files/gitlab-8.13.0-sidekiq.init,
   -files/gitlab-8.13.0-unicorn.init, -gitlab-ce-8.12.7.ebuild,
